--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -34,6 +34,318 @@ TBD
 
 TBD
 
+2004
+----
+
+This was the year that indie broke into the public consciousness, thanks to a
+couple key records that had come out that year, and late in the previous.
+Admittedly I had been progressively starting to listen to this kind of music
+without totally realizing it. Today it is easy to draw a line between the kind
+of alt rock that grew out of the late 90s and the indie rock that would dominate
+the next decade. At the time things were less clear. It was especially confusing
+for me, since I was discovering a lot of new things on the nascent Sirius
+Satellite radio. Sirius had two stations I listened to regularly: one called Alt
+Nation (ostensibly the music that grew out of 90s alt rock) and Left of Center
+(ostensibly music of the past and current day released on independent labels).
+The truth was more complicated, with quite a bit of overlap between the two
+stations and progressively, Left of Center became more about the indie
+aesthetic, instead of any sort of statement about how the music was produced. My
+tastes started to lean heavily towards these indie sounds, and I felt like a
+music connoisseur. Little did I know that millions of others my age were doing
+the very same thing at the same time. Indie would also be distinct from the
+mainstream pop of the same era, but it was a significant cultural and commercial
+force.
+
+This was probably the most difficult year of my life. My time in grad school
+came to an unexpected end, and I found myself suddenly looking for my
+first real job. My first significant relationship had ended and my interactions
+with my family continued to be strained as a result of my leaving the extreme
+religion that they belonged to. Despite all that, there was also a strong
+feeling of potential under all the struggle. I graduated with my Masters degree,
+and thanks to an research assistantship, had no debt. While I felt a bit alone
+and somewhat estranged from my family, I also felt free to make my own decisions
+in a way that I never had before. Life was hard, but still very exciting. When I
+look at the albums below, I remember the struggle and hope for the future. This
+where I started building the good life I have today.
+
+.. image:: images/2004.jpg
+  :width: 900
+  :alt: My 2004 favorite albums
+
+.. raw:: html
+
+  <iframe style="border-radius:12px" 
+  src="https://open.spotify.com/embed/playlist/2iDooHc4MhACleaMqOnUPV?utm_source=generator&theme=0" 
+  width="100%" height="380" frameBorder="0" allowfullscreen="" 
+  allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+- *Funeral* by **The Arcade Fire** - Besides the **Postal Service** record that
+  had come out the year before, no other record was more influential in the
+  "mainstreaming of indie" than this one. Still a stunning record today, only
+  Canadian bands can be this over the top and not seem ridiculous. This music
+  feels simultaneously designed for youth to dance in music festival fields, and
+  to sell various products through television commercials and movie trailers.
+  [*Memory*: I became aware of "Neighborhood #1" when it was the iTunes free
+  download of the week in fall of 2004. I loved it, but I was so broke at the
+  time I wouldn't even consider getting the whole record. Shortly thereafter I
+  heard "Neighborhood #3" playing in the background at Darkhorse Tavern in State
+  College, PA. I remember dedicating some of my limited funds to buy a copy at
+  Circuit City, one of the last CDs I bought before getting a job in early
+  2005.]
+  
+- *Talkie Walkie* by **Air** - Their most "poppy" record, with nearly every
+  track a somewhat conventional song. Those chill electronic sounds accented
+  with guitars and wind instruments are still there, but now with chill abstract
+  lyrics. I have a strong personal attachment to *Moon Safari*, but this is
+  probably their objectively best record with the widest appeal. [*Memory*: I
+  can't hear this record without thinking of Cleveland Ohio. This ended up
+  becoming the soundtrack to my second summer working at the NASA Glenn Research
+  Center. Many mornings on my drive into the research center I was listening to
+  this on my CD discman connecting to my car stereo via a cassette adapter. This
+  was the first time that I remember finding one of my favorite semi-obscure bands
+  playing on satellite radio. I remember hearing "Cherry Blossom Girl" and
+  "Surfing on a Rocket" playing though the portable receiver unit suction cup
+  mounted to my dash.]
+
+- *Misery is a Butterfly* by **Blonde Redhead** - The albums from the first half
+  their career all have a fairly similar sound. This is where they stared to
+  pivot to full on dream pop. It suits them well, and this and the next one
+  captures them in top form, before they went overboard on the pop. [*Memory*:
+  This was a retrospective discovery. After loving *23* I was able to explore
+  the whole back catalog thanks to eMusic.]
+
+- *Bright Like Neon Love* by **Cut Copy** - This album sounds both incredibly
+  derivative of classic synthpop bands (especially **New Order**), and
+  completely ahead of the trends. In only a few short years, the "imagined 80s"
+  era of indie music would commence, and this is possibly the first notable
+  record in that trend. [*Memory*: I only listened to this record after knowing
+  and loving the two that came after. In fact I heard this for the first time
+  after buying the vinyl reissue at Record Store Day 2013.]
+
+- *Absent Friends* by **The Divine Comedy** - I have a hard time picking a
+  favorite from this guy, but this is the most likely answer for me. Fits in
+  well with the indie chamber pop of the time, only at a much higher level. Less
+  humor than what came before (and in the most recent records), but plenty of
+  wit and obscure references. The sound of an artist getting older, but no less
+  interesting or relevant. [*Memory*: This record will always be linked with the
+  fantastic live performance video that captured one of the largest and most
+  interesting configurations of his band.]
+
+- *The Dresden Dolls* by **The Dresden Dolls** - A really unique idea that
+  worked out for exactly one album and a song. Surely the only piano punk duo to
+  make it to the big time never equaled their self titled debut as a band or in
+  their solo work. There is actually quite a bit of range here: the straight
+  ahead pop punk of "Gravity", the quirky vaudeville of "Coin-Operated Boy", and
+  the sweet old time torch singing of "Jeep Song". [*Memory*: I think this is
+  the song that led me from Sirius Alt Nation to Left of Center. The same person
+  programmed both channels at the time, and there was a clear intent to bridge
+  between the two. In many ways this is the perfect music to make the journey
+  from 90s alt rock to the best part of 2000s indie.]
+
+- *Ta det lungnt* by **Dungen** - An often blistering, often quite sweet
+  psychedelic rock record where I understand none of the lyrics and don't care.
+  Still my favorite of theirs. [*Memory*: Looking back, I must have discovered
+  75% of the music I was listening to on Sirius. I can still remember hearing
+  this for the first time while brewing beer in the kitchen of my new apartment
+  and looking at the display to get the band info so I could acquire the disc.]
+
+- *Let it Die* by **Feist** - Before her iPod commercial, Lesley Feist was just
+  another indie folk-popper, although a quite brilliant one. This kind of
+  electronics accented chamber folk was about to become all the rage, and few
+  albums have done it quite as well as this one. The DIY whimsey of
+  "Mushaboom"'s sound and video would spawn a myriad of imitators, but no one
+  (especially not Zooey Deschanel) could quite pull it off the same way.
+  [*Memory*: I heard "Mushaboom" for the first time on a Music Choice TV
+  channel, even before satellite radio picked it up.]
+
+- *Blueberry Boat* by **Fiery Furnaces** - Just as wild sounding now as it was
+  back then. This was definitely their attempt at a new kind of progressive
+  rock. Epic art rock telling nonsensical stories about blueberry captains going
+  down with their ship and eating tacos for lunch. This works better than it
+  seems like it should, and has aged better than anyone could have imagined.
+  [*Memory*: It is wild to think this used to be in the top 5 of the
+  RateYourMusic chart for 2005. That is how I found out about it. For some
+  reason some of the more extreme forms of indie have not kept their status, and
+  this is now outside the top 200.]
+
+- *EP* by **Fiery Furnaces** - The shorter more conventional pop songs that
+  didn't fit conceptually or space-wise on *Blueberry Boat*, many of these are
+  their most enduring tunes like the whimsical "Tropical-Iceland" and the
+  sugary sweet "Here Comes the Summer". One of my favorite indie-pop records
+  from a band that typically is making much more challenging music.
+
+- *Franz Ferdinand* by **Franz Ferdinand** - The first post punk revival band to
+  realize the indie kids wanted to dance. A massively influential record in
+  retrospect, and just as enjoyable today as the day it was released. I recently
+  heard this described as classic rock, and while that feels a little weird, it
+  is absolutely true. [*Memory*: I heard "Take Me Out" streaming Virgin radio
+  in my grad student office. I was often listening to UK radio at the time,
+  since their indie scene was peaking. I wrote an E-mail to Sirius Satellite
+  radio to request the current US Single "Darts of Pleasure". They played it,
+  but I remember the DJ kind of making fun of it. I was right!]
+
+- *Thunder, Lightning, Strike* by **The Go! Team** [**2004 Favorite**] - For a
+  moment, it looked like there was going to be some sort of huge new genre that
+  involved hyperactive, rapid fire samples. This kind of post-modern pop didn't
+  end up being that big of a deal, but it did produce this brilliant record.
+  Interestingly, there are two different versions of this album. While I do miss
+  some of the original samples featured in the 2004 UK release, I prefer the
+  expanded version that came out the following year in the US. [*Memory*: I
+  hated this at first. The samples seemed so garish to me when this started
+  getting big plays on Sirius Left of Center in late 2004. For whatever reason
+  it was the amateurish, childlike "Hold Yr Terror Close" that would get me on
+  board when the "legal" version of the record was released in the fall of
+  2005.]
+  
+- *The Lost Riots* by **Hope of the States** - I really wish there were more
+  bands that took the basic ideas of post-rock to make more conventional song
+  based albums. This seems like an obvious idea, but this record is one of the
+  few examples where this is done well. The opener, "The Black Amnesias", isn't
+  very far from the likes of **Explosions in the Sky** or **Godspeed You! Black
+  Emperor**, but then we diverge into the post-Britpop of **Muse** or **Doves**.
+  A really pretty hard rock album [*Memory*: My lack of funds in 2004 meant that
+  many of the things I would hear and enjoy on satellite radio would not enter
+  my collection. There were a list of tracks I had saved in the memory of my
+  plug and play radio that I wouldn't explore further until many years later.
+  "The Red The White The Black the Blue" was one of my favorites on Alt Nation
+  back in the summer of 2004, but I wouldn't get the CD until sometime in the
+  year 2007. It immediately became a favorite, and I was left to wonder why they
+  didn't become a bigger thing.]
+
+- *Antics* by **Interpol** - A bit of a lighter mood on this one, with what
+  could almost be described as a pop sound at times. It suits them well, and
+  this is my favorite record by these guys. "Evil" is an amazing song and is a
+  perfect way to summarize this highly successful change of direction.
+  [*Memory*: I think if I would have picked a favorite record at the time, it
+  would have been this one. Listening to this today makes me feel very nostalgic
+  for what was a very difficult time in my life.]
+
+- *Hot Fuss* by **The Killers** - The birth of "indie" bands debuting on major
+  labels, but what an outstanding way to start. This is generally seen at the
+  genesis of UK "landfill indie", despite being the work of a US band. Without
+  question, this sound would be very overused and tired only a year later but
+  it feels fresh and compelling here. [*Memory*: This was one of only two albums
+  I bought during my days of limited financial means between grad school and my
+  first job. I like "Jenny Was a Friend of Mine" that much. The other was *The
+  Bends* by **Radiohead**, with both coming from the Columbia House Record
+  Club.]
+
+- *Good News for People Who Love Bad News* by **Modest Mouse** - My favorite
+  "sellout record". This is widely perceived as a difficult indie darling
+  changing their sound to appeal to the masses. I prefer to see it as a
+  difficult indie darling finding a way to turn their sound into a platinum
+  seller. When I heard "Float On" for the first time I knew it was going to be
+  a monster hit. [*Memory*: I remember having an argument about the merits of
+  this album with a hardcore fan who gave me a drive home from a party in 2004.
+  That argument has repeated at least a half a dozen times since.]
+
+- *You Are the Quarry* by **Morrissey** - All of a sudden Moz was an indie
+  artist again, and was making fantastic music. It seems likely that this will
+  stand as his last classic record, and his last moment in the popular
+  consciousness for his music and not his sour personality. [*Memory*: Shortly
+  before this release I had starting listening to the artist and his band **The
+  Smiths**. In those days, the first thing you heard in the Rock and Roll Hall
+  of Fame was "How Soon is Now" in the intro video to the museum. After my
+  initial dive into the back catalog I started hearing "Irish Blood, English
+  Heart" on satellite radio, and was excited that the man was still making great
+  music. Shortly after "First of the Gang to Die" would be an even bigger indie
+  hit, and I would run out to the local Best Buy to grab this one.]
+
+- *Mr. Beast* by **Mogwai** - Admittedly, these guys tend to make music that
+  sounds pretty much the same. The albums that have become my favorites tend to
+  be the ones that hit a little different. On this record, the piano comes to
+  the front in a way that builds interest in a way that the more guitar focussed
+  albums do not. "Auto Rock" is probably my favorite song by the band.
+  [*Memory*: This was the new album by the band, at the time that I was
+  exploring their back catalog. Even at that time it was very apparent to me,
+  how much this still sounded like what they were doing in the late 90s.]
+
+- *The Slow Wonder* by **A.C. Newman** - His solo material tends to sound
+  exactly like **The New Pornographers** without all the harmony vocals. This
+  record ended up getting some of his best material from an era that would
+  produce two of the finest records from that band. This is one of the greatest
+  power-pop records ever made. [*Memory*: This is the first album I discovered
+  via the nascent Pandora platform in late 2005. I heard the outstanding "On the
+  Table" there, and it not only led me to this fine record, but to one of my
+  favorite bands for the next few years.]
+
+- *Satanic Panic in the Attic* by **Of Montreal** - This album was my point of
+  entry into the Elephant6 crew and my introduction to what would become one of
+  my favorite artists over the next decade. In retrospect, this mid period work
+  is the perfect fusion of the early **Beach Boys** inspired psychedelic pop and
+  the funky electronica that would come later. At the time, Kevin Barnes
+  changes seemed sudden and jarring, but looking back a conceptual unity has
+  come into focus. [*Memory*: I learned about this band when a song from the
+  next record, "I Was Never Young" was used in a modified form for a commercial.
+  As was my custom in the day, I used the AllMusicGuide to identify and obtain
+  their highest rated record, which turned out to be this one. It was the
+  perfect point of entry that led me to not only this fine artist, but the
+  related Elephant6 collective that would dominate my listening for almost the
+  next decade.]
+
+- *Drag it Up* by **Old 97's** - A really appealing combination of old time
+  country tinged rock and roll and power-pop. One whiskey tinged song of
+  heartbreak after another. [*Memory*: Another record I first heard about on
+  satellite radio in my days of being broke that I wouldn't buy until years
+  later. In this case not until 2010.]
+
+- *The Blue Album* by **Orbital** - I kind of wish they didn't make their
+  comeback in the 2010s. This was the perfect way to go out. An ambitious record
+  that builds on their album oriented techno roots and goes in a bunch of new
+  directions that mostly work. [*Memory*: This was actually my point of entry
+  for this duo, and I would work backwards to their classic 90s stuff. I heard
+  "You Lot" on the Sirius Liquid Todd show, and immediately sought out the high
+  points of their catalog. Maybe because I heard this first, I tend to rate this
+  much higher than most fans.]
+
+- *More Adventurous* by **Rilo Kiley** - The highpoint for this band, and one of
+  the finest indie pop records ever made. The country tinged pop songs contained
+  here are the strongest, most fully realized statement from this act. If you
+  were to make a single CD compilation of 2000s indie, "Portions for Foxes" has
+  to be on there. [*Memory*: Without question the reason I (or almost anyone)
+  knows about this record is due to the participation of lead singer **Jenny
+  Lewis** on the **Postal Service** record the year before.]
+
+- *From a Basement on a Hill* by **Elliot Smith** - Another of the records that
+  feels designed to transition a 90s alt-rock fan into an indie music fan. There
+  is also a symphonic 60s Beatles style vibe here as well. This feels like it
+  was specifically made to appeal to my generation. It is of course difficult to
+  separate this record from the tragic suicide of the artist. The outstanding,
+  but troubling "King's Crossing" is a compelling but difficult listen knowing
+  how things would end. [*Memory*: I listened to this repeatedly during the most
+  difficult period in my life. Listening to it now I don't feel the bad, but
+  instead remember the strength and resilience it took to get to a far better
+  place.]
+  
+- *Bows and Arrows* by **The Walkmen** - "The Rat" was their big break into the
+  big time, and is still a great track. I much prefer the weirder, warmer sounds
+  of "What's in It for Me" and "No Christmas While I'm Talking". This is their
+  most famous record, but it doesn't do a good job representing what made them
+  great. [*Memory*: This was my point of entry like many folks. I, of course had
+  heard "We've Been Had" on that Saturn Ion commercial that played for years up
+  to this point, but "The Rat" was a phenomenon I could not ignore. At this
+  point I was traveling home from Cleveland every weekend with the hope of
+  reconnecting with my ex. Since my PC was at my place in Ohio I remember
+  putting this into my CD boom-box for the first listen.]
+
+- *A Ghost is Born* by **Wilco** - An amazing followup that doesn't get enough
+  credit. Yes they go a bit to far with the weird electronic noise at the end,
+  but otherwise this is a masterpiece of pop and country. "Theologians" might be
+  their single greatest pop song. There are some amazing instrumental passages
+  on this record that really show off the instrumental talent of this band.
+  [*Memory*: In the fall of 2005 I would buy an Ipod Nano, my first real MP3
+  player. This was one of the first albums I loaded on the device and I remember
+  playing it through my car stereo as we waited for the gates to open at our
+  Penn State tailgating lot.]
+
+- *Smile* by **Brian Wilson** - This has largely been replaced by the archival
+  presentation of the **Beach Boys** attempts at this material. That said, this
+  is probably the more refined and complete version. Also without this, I doubt
+  the attempt would have been made to assemble the original recordings.
+  [*Memory*: I didn't look into this when it was released to great fanfare. It
+  would take until 2009 until I finally gave this a chance. It would make me
+  realize there was much more to the **Beach Boys** than *Pet Sounds*.]
+
 2005
 ----
 
@@ -349,7 +661,9 @@ be the last year where no album found a way into my collection digitally.
   great summary of why these guys are one of my favorite bands of the last 25
   years. [*Memory*: At the time, this was my favorite album of the year. I tend
   to underestimate how I feel about this one, I really still love it. In fact I
-  imported a vinyl copy as I wrote this paragraph.]
+  imported a vinyl copy as I wrote this paragraph. It joins my CD copy, which I
+  clearly remember as the first new album I bought after getting my first real
+  job in late April 2005. It was great to not feel completely broke anymore.]
 
 - *Work* by **Sound Team** - Another case where a band's first EP is by far
   their finest moment. The rough around the edges post-punk on offer here is far
