--- a/src/music/2010s.rst
+++ b/src/music/2010s.rst
@@ -1868,6 +1868,11 @@ that are not contained within the albums listed above:
 - "Black Diamond I/II" by **Ava Luna** - A nutty combination of soul,
   traditional indie, and **Nine Inch Nails**?!
 
+- "Death Rays" by **Mogwai** - Finally something different, more of this please!
+
+- "Where'd ALl the Time Go?" by **Dr. Dog** - Every now and then these low-fi
+  revivalists find a really great song
+
 **Exploring the Past**
 
 This was definitely the decade of my life when I was most engaged with the new,
